Update scenarios steps in create booking api